feat: updated landing page copy

--- a/content/docs/index.mdx
+++ b/content/docs/index.mdx
@@ -1,13 +1,27 @@
 ---
-title: Hello World
-description: Your first document
+title: Introduction
+description: shadcn/ui is a set of beautifully-designed, accessible components and a code distribution platform. Works with your favorite frameworks and AI models. Open Source. Open Code.
 ---
 
-Welcome to the docs! You can start writing documents in `/content/docs`.
+## FAQ
 
-## What is Next?
-
-<Cards>
-  <Card title="Learn more about Next.js" href="https://nextjs.org/docs" />
-  <Card title="Learn more about Fumadocs" href="https://fumadocs.dev" />
-</Cards>
+<Accordion type="single" collapsible>
+  <AccordionItem value="item-1">
+    <AccordionTrigger>What is this UI library?</AccordionTrigger>
+    <AccordionContent>
+      This is a custom UI library built with React, Tailwind CSS, and shadcn/ui. It provides beautiful, accessible components for building modern web applications.
+    </AccordionContent>
+  </AccordionItem>
+  <AccordionItem value="item-2">
+    <AccordionTrigger>How do I get started?</AccordionTrigger>
+    <AccordionContent>
+      Browse the components in the documentation and copy the code you need. All components are ready to use and fully customizable.
+    </AccordionContent>
+  </AccordionItem>
+  <AccordionItem value="item-3">
+    <AccordionTrigger>Is it free to use?</AccordionTrigger>
+    <AccordionContent>
+      Yes! This library is open source and free to use in your projects.
+    </AccordionContent>
+  </AccordionItem>
+</Accordion>
